[project]
name = "simple-bge-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "flagembedding>=1.3.3",
    "pydantic>=2.10.4",
    "ruff>=0.8.3",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]
